--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             services.
           </p>
         </header>
-        <div class="rated-container">
-          <div class="rated first">
-            <div class="container-image">
+        <div class="ratings">
+          <div class="rating rating-1">
+            <div class="container-stars">
               <img src="/assets/icon-star.svg" alt="Five Stars" /><img
                 src="/assets/icon-star.svg"
                 alt="Five Stars"
@@ -46,8 +46,8 @@
             </div>
             <p>Rated 5 Stars in Reviews</p>
           </div>
-          <div class="rated 2">
-            <div class="container-image">
+          <div class="rating rating-2">
+            <div class="container-stars">
               <img src="/assets/icon-star.svg" alt="Five Stars" /><img
                 src="/assets/icon-star.svg"
                 alt="Five Stars"
@@ -58,8 +58,8 @@
             </div>
             <p>Rated 5 Stars in Report Guru</p>
           </div>
-          <div class="rated 3">
-            <div class="container-image">
+          <div class="rating rating-3">
+            <div class="stars">
               <img src="/assets/icon-star.svg" alt="Five Stars" /><img
                 src="/assets/icon-star.svg"
                 alt="Five Stars"
@@ -73,7 +73,7 @@
         </div>
       </section>
       <section class="cards">
-        <div class="card 1">
+        <div class="card card-1">
           <cite>
             <img src="/assets/image-colton.jpg" alt="Colton Photo" />
             <p>
@@ -89,7 +89,7 @@
             </p>
           </blockquote>
         </div>
-        <div class="card 2">
+        <div class="card card-2">
           <cite>
             <img src="/assets/image-irene.jpg" alt="Irene Photo" />
             <p>
@@ -105,7 +105,7 @@
             </p>
           </blockquote>
         </div>
-        <div class="card 3">
+        <div class="card card-3">
           <cite>
             <img src="/assets/image-anne.jpg" alt="Anne Photo" />
             <p>
