--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
   </head>
 
   <body>
-    <main>
-      <section class="container">
-        <header>
+    <section class="wrapper">
+      <div class="top-wrapper">
+        <div class="main-text">
           <h1><strong>10,000+ of our users love our products.</strong></h1>
           <p>
             We only provide great products combined with excellent customer
             service. See what our satisfied customers are saying about our
             services.
           </p>
-        </header>
+        </div>
         <div class="ratings">
           <div class="rating rating-1">
-            <div class="container-stars">
+            <div class="stars">
               <img src="/assets/icon-star.svg" alt="Five Stars" /><img
                 src="/assets/icon-star.svg"
                 alt="Five Stars"
@@ -47,7 +47,7 @@
             <p>Rated 5 Stars in Reviews</p>
           </div>
           <div class="rating rating-2">
-            <div class="container-stars">
+            <div class="stars">
               <img src="/assets/icon-star.svg" alt="Five Stars" /><img
                 src="/assets/icon-star.svg"
                 alt="Five Stars"
@@ -71,58 +71,52 @@
             <p>Rated 5 Stars in BestTech</p>
           </div>
         </div>
-      </section>
-      <section class="cards">
-        <div class="card card-1">
-          <cite>
+      </div>
+      <div class="bottom-wrapper">
+        <div class="buyer buyer-1">
+          <div class="buyer-user">
             <img src="/assets/image-colton.jpg" alt="Colton Photo" />
-            <p>
+            <h5>
               Colton Smith
               <span>Verified Buyer</span>
-            </p>
-          </cite>
-          <blockquote>
-            <p>
-              " We needed the same printed design as the one we had ordered a
-              week prior. Not only did they find the original order, but we also
-              received it in time. Excellent! "
-            </p>
-          </blockquote>
+            </h5>
+          </div>
+          <div class="buyer-feedback">
+            " We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent! "
+          </div>
         </div>
-        <div class="card card-2">
-          <cite>
+        <div class="buyer buyer-2">
+          <div class="buyer-user">
             <img src="/assets/image-irene.jpg" alt="Irene Photo" />
-            <p>
+            <h5>
               Irene Roberts
               <span>Verified Buyer</span>
-            </p>
-          </cite>
-          <blockquote>
-            <p>
-              " Customer service is always excellent and very quick turn around.
-              Completely delighted with the simplicity of the purchase and the
-              speed of delivery. "
-            </p>
-          </blockquote>
+            </h5>
+          </div>
+          <div class="buyer-feedback">
+            " Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery. "
+          </div>
         </div>
-        <div class="card card-3">
-          <cite>
+        <div class="buyer buyer-3">
+          <div class="buyer-user">
             <img src="/assets/image-anne.jpg" alt="Anne Photo" />
-            <p>
+            <h5>
               Anne Wallace
               <span>Verified Buyer</span>
-            </p>
-          </cite>
-          <blockquote>
-            <p>
-              " Put an order with this company and can only praise them for the
-              very high standard. Will definitely use them again and recommend
-              them to everyone! "
-            </p>
-          </blockquote>
+            </h5>
+          </div>
+          <div class="buyer-feedback">
+            " Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone! "
+          </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
   </body>
 </html>
 <!-- 
