--- a/index.html
+++ b/index.html
@@ -36,37 +36,37 @@
         <div class="ratings">
           <div class="rating rating-1">
             <div class="stars">
-              <img src="/assets/icon-star.svg" alt="Five Stars" /><img
-                src="/assets/icon-star.svg"
+              <img src="assets/icon-star.svg" alt="Five Stars" /><img
+                src="assets/icon-star.svg"
                 alt="Five Stars"
-              /><img src="/assets/icon-star.svg" alt="Five Stars" /><img
-                src="/assets/icon-star.svg"
+              /><img src="assets/icon-star.svg" alt="Five Stars" /><img
+                src="assets/icon-star.svg"
                 alt="Five Stars"
-              /><img src="/assets/icon-star.svg" alt="Five Stars" />
+              /><img src="assets/icon-star.svg" alt="Five Stars" />
             </div>
             <p>Rated 5 Stars in Reviews</p>
           </div>
           <div class="rating rating-2">
             <div class="stars">
-              <img src="/assets/icon-star.svg" alt="Five Stars" /><img
-                src="/assets/icon-star.svg"
+              <img src="assets/icon-star.svg" alt="Five Stars" /><img
+                src="assets/icon-star.svg"
                 alt="Five Stars"
-              /><img src="/assets/icon-star.svg" alt="Five Stars" /><img
-                src="/assets/icon-star.svg"
+              /><img src="assets/icon-star.svg" alt="Five Stars" /><img
+                src="assets/icon-star.svg"
                 alt="Five Stars"
-              /><img src="/assets/icon-star.svg" alt="Five Stars" />
+              /><img src="assets/icon-star.svg" alt="Five Stars" />
             </div>
             <p>Rated 5 Stars in Report Guru</p>
           </div>
           <div class="rating rating-3">
             <div class="stars">
-              <img src="/assets/icon-star.svg" alt="Five Stars" /><img
-                src="/assets/icon-star.svg"
+              <img src="assets/icon-star.svg" alt="Five Stars" /><img
+                src="assets/icon-star.svg"
                 alt="Five Stars"
-              /><img src="/assets/icon-star.svg" alt="Five Stars" /><img
-                src="/assets/icon-star.svg"
+              /><img src="assets/icon-star.svg" alt="Five Stars" /><img
+                src="assets/icon-star.svg"
                 alt="Five Stars"
-              /><img src="/assets/icon-star.svg" alt="Five Stars" />
+              /><img src="assets/icon-star.svg" alt="Five Stars" />
             </div>
             <p>Rated 5 Stars in BestTech</p>
           </div>
@@ -75,7 +75,7 @@
       <div class="bottom-wrapper">
         <div class="buyer buyer-1">
           <div class="buyer-user">
-            <img src="/assets/image-colton.jpg" alt="Colton Photo" />
+            <img src="assets/image-colton.jpg" alt="Colton Photo" />
             <h5>
               Colton Smith
               <span>Verified Buyer</span>
@@ -89,7 +89,7 @@
         </div>
         <div class="buyer buyer-2">
           <div class="buyer-user">
-            <img src="/assets/image-irene.jpg" alt="Irene Photo" />
+            <img src="assets/image-irene.jpg" alt="Irene Photo" />
             <h5>
               Irene Roberts
               <span>Verified Buyer</span>
@@ -103,7 +103,7 @@
         </div>
         <div class="buyer buyer-3">
           <div class="buyer-user">
-            <img src="/assets/image-anne.jpg" alt="Anne Photo" />
+            <img src="assets/image-anne.jpg" alt="Anne Photo" />
             <h5>
               Anne Wallace
               <span>Verified Buyer</span>
